# chest-radiology-deep-learning-bias-analysis

./: .env.example  .gitignore  ANALYSIS.md  Makefile  README.md  conftest.py  environment.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yaml  train.yaml
configs/: base.yaml
data/: download_raw_data.py  generate_manifests.py
data/processed/: test_manifest.parquet  test_manifest_ce.parquet  test_manifest_gb.parquet  test_manifest_pr.parquet  test_manifest_ps.parquet  train_manifest.parquet  train_manifest_ce.parquet  train_manifest_gb.parquet  train_manifest_pr.parquet  train_manifest_ps.parquet  valid_manifest.parquet
data/style_transfer_algos/: generate_stylized.py
deep-learning/: .gitignore  Makefile  README.md  pyproject.toml
deep-learning/configs/: base.yaml  experiment_01.yaml
deep-learning/src/: config.py  data.py  evaluate.py  loss.py  metrics.py  model.py  train.py  utils.py
deep-learning/tests/: test_data.py  test_model.py
deploy/: Dockerfile  app.py  requirements.txt
docs/: Label_Domain_Knowledge.md
ed_share/configs/: train_ce.yaml  train_gb.yaml  train_original.yaml  train_pr.yaml  train_ps.yaml
infra/cdk/: stack.py
infra/terraform/: main.tf  variables.tf
monitoring/: alerts.yaml  dashboard.json  drift.py
notebooks/: 01_data_exploration.ipynb  02_training_smoke_test.ipynb
results/bias_eval/: per_label.json  reliance.json
results/ce/: training_history.parquet
results/gb/: best_model.pth  test_results.json  training_history.parquet
results/original/: best_model.pth  (+3 more)
src/: bias_eval.py  chexpert_dataset.py  compare_configs.py  config.json  evaluate.py  plot.py  plot_curves.py  plot_nick_reliance.py  train.py
tests/: test_chexpert_dataset.py  test_densenet.py  test_reliance.py  test_transforms.py
(+192 files in other folders)
