[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chexpert-texture-bias"
version = "0.1.0"
description = "Investigating Shape vs. Texture Bias in DenseNet121 on Chest X-Rays using Style Transfer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pandas",
    "numpy",
    "scikit-learn",
    "tqdm",
    "Pillow",
    "matplotlib",
    "polars",
    "pyarrow"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
