[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "my_project"          # TODO: rename
version = "0.1.0"
description = ""             # TODO: fill in
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision",
    "numpy",
    "pandas",
    "scikit-learn",
    "pyyaml",
    "python-dotenv",
    "tqdm",
    "wandb",                 # remove if using MLflow / Optuna standalone
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "ipykernel",
    "jupyterlab",
]
serve = [
    "fastapi",
    "uvicorn[standard]",
    "onnxruntime",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
